kubernetes/production.common-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webhook-cd
