kubernetes/production.webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: webhook-cd
  labels:
    name: webapp
    env: productions
    app: webhook-cd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - image: ghcr.io/silte/kubernetes-webhook:latest
          name: webapp
          imagePullPolicy: Always
          resources:
            limits:
              cpu: '0.2'
              memory: '200Mi'
            requests:
              cpu: '0.002'
              memory: '30Mi'
          ports:
            - containerPort: 3000
              name: webapp
      imagePullSecrets:
        - name: ghcr-auth-token
      serviceAccountName: webhook-user
      automountServiceAccountToken: true

---
apiVersion: v1
kind: Service
metadata:
  namespace: webhook-cd
  name: webhook-cd
  labels:
    app: webhook-cd
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: webapp

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-cd
  namespace: webhook-cd
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: cd.silte.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-cd
                port:
                  number: 80
